# m5-fed-speech

./: .gitignore  LICENSE  README.md  STATE.md  pyproject.toml
.github/workflows/: test.yml
docs/: cli-demo.txt
notebooks/: 01_demo.ipynb
scripts/: run_pipeline.py
src/m5_fed_speech/: __init__.py  backtest.py  charts.py  classify.py  lexicon.py  scrape.py
tests/: test_backtest.py  test_classify.py  test_lexicon.py
